--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -32,9 +32,10 @@ jobs:
       uses: thedoctor0/zip-release@0.7.6
       with:
         type: 'zip'
-        filename: '${{ steps.getname.outputs.value }}_${{ steps.getversion.outputs.value }}'
+        filename: "${{ steps.getname.outputs.value }}_${{ steps.getversion.outputs.value }}.zip"
         exclusions: '*.git* *.md /.github *.sh /.vscode /.releaserc'
-    - uses: ncipollo/release-action@v1
+    - name: Upload Release
+      uses: ncipollo/release-action@1.14.0
       with:
         tag: "v${{ steps.getversion.outputs.value }}"
         artifacts: "${{ steps.getname.outputs.value }}_${{ steps.getversion.outputs.value }}.zip"
