--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -35,7 +35,7 @@ jobs:
         filename: "${{ steps.getname.outputs.value }}_${{ steps.getversion.outputs.value }}.zip"
         exclusions: '*.git* *.md /.github *.sh /.vscode /.releaserc'
     - name: Upload Release
-      uses: ncipollo/release-action@1.14.0
+      uses: ncipollo/release-action@v1
       with:
         tag: "v${{ steps.getversion.outputs.value }}"
         artifacts: "${{ steps.getname.outputs.value }}_${{ steps.getversion.outputs.value }}.zip"
