--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -41,5 +41,8 @@ jobs:
     - name: Upload Release
       uses: ncipollo/release-action@v1
       with:
+        allowUpdates: true
+        artifactErrorsFailBuild: true
+        # updateOnlyUnreleased: true # Can we have production at home? Production at home:
         tag: "v${{ steps.getversion.outputs.value }}"
         artifacts: "${{ steps.getname.outputs.value }}_${{ steps.getversion.outputs.value }}.zip"
